# mac-scrobble

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/: build.yml
.github/workflows/: build.yml
src/: main.ts  output.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: listener.rs  main.rs
