[package]
name = "mac-scrobble"
version = "1.0.0"
description = "macOS Last.FM scrobblet"
authors = ["imyanice"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "updater", "shell-open", "system-tray", "notification"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
confy = "0.6.1"
rustfm-scrobble = "1.1.1"
osascript = "0.3.0"
chrono = "0.4.38"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
